@@ -4,6 +4,9 @@ Changelog for statusmessages
 
 statusmessages 1.0 (unreleased)
 
+    - Reimplementation as an adapter, thx to philiKON's advice
+      [hannosch]
+
     - Initial implementation
       [hannosch]
 
